After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 778203 - icon shown at top left corner when dnd begins
icon shown at top left corner when dnd begins
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
3.22.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2017-02-05 13:03 UTC by Mohammed Sadiq
Modified: 2017-02-17 18:39 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
nautilus dnd issue (video) (29.36 KB, video/webm)
2017-02-05 13:03 UTC, Mohammed Sadiq
  Details
gdk: Ensure GdkDragContext instantly updates drag window position (2.83 KB, patch)
2017-02-07 16:06 UTC, Carlos Garnacho
committed Details | Review

Description Mohammed Sadiq 2017-02-05 13:03:16 UTC
Created attachment 344972 [details]
nautilus dnd issue (video)

When dnd is begun in nautilus, the icon is first placed at the top left of gnome shell.

How to reproduce:
Click and drag some icon as slow as possible (Sorry, try harder)

I'm on X11 if that matters. Please see the attached screencast.

This can be an issue in gtk+ as this also happens in evince and gnome-calendar.

Thanks
Comment 1 Carlos Soriano 2017-02-07 12:20:40 UTC
It's probably gtk+, I also experienced that. Reassining
Comment 2 Carlos Garnacho 2017-02-07 16:06:09 UTC
Created attachment 345124 [details] [review]
gdk: Ensure GdkDragContext instantly updates drag window position

Otherwise we wait for the next gdk_drag_motion() call, which will
happen on the next motion event, making the drag window briefly visible
on the 0,0 root coordinates.
Comment 3 Matthias Clasen 2017-02-15 23:21:40 UTC
Review of attachment 345124 [details] [review]:

ok
Comment 4 Carlos Garnacho 2017-02-17 18:39:24 UTC
Attachment 345124 [details] pushed as 9029bc0 - gdk: Ensure GdkDragContext instantly updates drag window position